# LEDmatrix_render_model

./: .gitignore  README.md  run_sim.py
render_sim/: run_sim.py
render_sim/algorithms/: alg_basic.py  base_algorithm.py
render_sim_pkg/: README.md  pyproject.toml
render_sim_pkg/src/render_sim/: __init__.py
render_sim_pkg/src/render_sim/algorithms/: __init__.py  alg_basic.py  base_algorithm.py
render_sim_pkg/src/render_sim/core/: __init__.py  frame_gen.py  utils.py
render_sim_pkg/src/render_sim/core/algorithms/: __init__.py  alg_basic.py  base_algorithm.py
