[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "render-sim"
version = "0.1"
requires-python = ">=3.8"
authors = [
  {name = "Felipe Tampier", email = "felipetampier@hotmail.com"},
]
description = "Small simulator project for rendering patterns on grid-based LED matrices."
readme = "README.md"
dependencies = ["pandas"]